# trmnl-weather-gcal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  gcal_tech_design.md  markup.liquid  pyproject.toml
app/: __init__.py  calendar.py  config.py  main.py  oauth.py  storage.py  weather.py
app/templates/: setup.html
